Part B done.